force-app/main/default/objects/Assertion__c/Assertion__c.object-meta.xml
<CustomObject>
    <description>One assertion on a golden case. Master-detail child of Golden_Case__c.</description>
    <label>Assertion</label>
    <nameField>
        <displayFormat>ASRT-{000000}</displayFormat>
        <label>Assertion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assertions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>