force-app/main/default/objects/Assertion__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When true, this assertion is evaluated during a run.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>