force-app/main/default/objects/Assertion__c/fields/Assertion_Type__c.field-meta.xml
<CustomField>
    <fullName>Assertion_Type__c</fullName>
    <label>Assertion Type</label>
    <description>Matches Fleet_Assertion_Type__mdt.Type_Key__c, e.g. MUST_ROUTE_TO.</description>
    <inlineHelpText>The Type_Key of a Fleet_Assertion_Type__mdt record.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>