force-app/main/default/objects/Assertion__c/fields/Comparator__c.field-meta.xml
<CustomField>
    <fullName>Comparator__c</fullName>
    <label>Comparator</label>
    <description>How the actual value is compared to the expected value.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not_Equals</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Not_Contains</fullName>
                <label>Does Not Contain</label>
            </value>
            <value>
                <fullName>Greater_Than</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>Less_Than</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>Within_Tolerance</fullName>
                <label>Within Tolerance</label>
            </value>
            <value>
                <fullName>Semantic_Match</fullName>
                <label>Semantic Match</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>