force-app/main/default/objects/Assertion__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <description>The expected target the assertion checks against, e.g. a topic name or action.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>