force-app/main/default/objects/Assertion__c/fields/Golden_Case__c.field-meta.xml
<CustomField>
    <fullName>Golden_Case__c</fullName>
    <label>Golden Case</label>
    <description>The golden case this assertion evaluates.</description>
    <type>MasterDetail</type>
    <referenceTo>Golden_Case__c</referenceTo>
    <relationshipLabel>Assertions</relationshipLabel>
    <relationshipName>Assertions</relationshipName>
</CustomField>