force-app/main/default/objects/Assertion__c/fields/Severity_On_Fail__c.field-meta.xml
<CustomField>
    <fullName>Severity_On_Fail__c</fullName>
    <label>Severity On Fail</label>
    <description>Severity assigned to a finding when this assertion fails.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>