force-app/main/default/objects/Assertion__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <label>Tolerance</label>
    <description>Numeric tolerance applied when the comparator is Within Tolerance.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>